# ubuntu-torch-template

./: .cspell.json  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  configure_environment.sh  devcontainer.json  post_attach.sh  user_info.sh
projectname/: example.ipynb  example.py  torch.ipynb
