[tool.poetry]
name = "projectname"
version = "0.1.0"
description = "Template for using Torch in an Ubuntu Dev Container."
authors = ["Mauro J. Sanchirico III <sanchirico.mauro@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipython = "^8.27.0"
ipympl = "^0.9.4"
torch = "^2.4.1"
torchvision = "^0.19.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.15.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
